# ai-kanban-board

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  review.md  review_final.md
backend/: AGENTS.md  ai.py  config.py  cookies.py  db.py  deps.py  guards.py  main.py  models.py  pyproject.toml  requirements.txt  test_ai.py  test_ai_board.py  test_api.py  test_db.py
backend/.venv-win/: pyvenv.cfg
backend/.venv-win/Scripts/: activate  activate.bat
backend/data/: kanban.db
backend/routes/: ai_board.py  auth.py  board.py
backend/static/: index.html
docs/: PLAN.md  auth.md  database.md  report.md
frontend/: AGENTS.md  Dockerfile  package.json  playwright.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: AiChatSidebar.test.tsx  AiChatSidebar.tsx  AuthGuard.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LoginPage.test.tsx  LoginPage.tsx
frontend/src/lib/: auth.test.ts  auth.ts  kanban.ts
frontend/tests/: global-setup.ts  kanban.spec.ts
scripts/: AGENTS.md  integration_test.py  start.ps1  validate_part11_e2e.py
