[project]
name = "pm-mvp-backend"
version = "0.1.0"
description = "Project Management MVP Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart>=0.0.7",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
